# Content-Manager-Editor-Backend

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  Makefile  README.md  compose.yaml  docker-compose.ci-integration.yml  pyproject.toml
.github/: AGENTS.md
.github/skills/: codeEdit.md  test.md
.github/workflows/: ci.yml  release-please.yml
assets/: package.json
docs/: ENDPOINTS.md  Firebase → Django Auth Migration.md  JWT_AUTH.md  TESTING.md
scripts/: manage.sh  superuser_check.py
src/: conftest.py  test_db.sqlite3
src/articles/: admin.py  models.py  serializers.py  test_neon_replication.py  urls.py  views.py
src/articles/migrations/: 0001_initial.py
src/articles/templates/: articles.html  base.html  navbar.html
src/articles/tests/: test_article_draft.py  test_image_upload.py  test_models.py  test_rag_corpus.py  test_serializers.py
src/config/: __init__.py  celery.py  gunicorn.py  settings.py  test_settings.py  urls.py  wsgi.py
src/pages/: apps.py  signals.py  tasks.py  urls.py  views.py
src/up/: urls.py  views.py
src/users/: serializers.py  tests.py  urls.py  views.py
src/utils/: strtbool.py
tests/integration/: test_cms_integration.py
